--- a/CV.html
+++ b/CV.html
@@ -6,6 +6,46 @@
     <title>Curicumun Vitae</title>
 </head>
 <body>
-    
+    <header>
+    <h1>Salim Khorchi</h1>
+    <h2>Développeur Web et Web Mobile</h2>
+    <a href="mailto:salimkhorchi11@gmail.com">Mail</a>
+    <a href="tel:0772415145">Téléphone</a>
+    <a href="https://www.google.com/maps/place/49+Rue+de+Dunkerque,+11400+Castelnaudary/@43.3179228,1.944338,15z/data=!3m1!4b1!4m6!3m5!1s0x12ae5a8408cfd41d:0xe02e767b8063114!8m2!3d43.3179233!4d1.9546377!16s%2Fg%2F11cp7hlxyh?entry=ttu&g_ep=EgoyMDI1MTAxNC4wIKXMDSoASAFQAw%3D%3D">Adresse</a>
+    <a href="#">Permis B</a>
+    <img src="" alt="">
+    </header>
+    <div>
+    <h3>Compétences</h3>
+    <ul>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>PHP</li>
+        <li>Python</li>
+    </ul>
+    <h3>Langues</h3>
+    <ul>
+        <dt>Français</dt>
+        <dd>Langue maternelle</dd>
+        <dt>Anglais</dt>
+        <dd>Intermédiaire</dd>
+        <dt>Espagnol</dt>
+        <dd>Notions</dd>
+    </ul>
+    <h3>Qualités</h3>
+    <ul>
+        <li>Organisation</li>
+        <li>Régularité</li>
+        <li>Rigueur</li>
+        <li>Esprit d'équipe</li>
+    </ul>
+    <h3>Centres d'intérêt</h3>
+    <ul>
+        <li>Fitness</li>
+        <li>Séries</li>
+        <li>Jeux vidéos</li>
+    </ul>
+</div>
 </body>
 </html>
