--- a/CV.html
+++ b/CV.html
@@ -47,5 +47,32 @@
         <li>Jeux vidéos</li>
     </ul>
 </div>
+<div>
+    <h3>Profil</h3>
+    <p>
+
+    </p>
+
+</div>
+<div>
+    <h3>Formations</h3>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
+
+<div>
+    <h3>Expérience professionnelle</h3>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
 </body>
 </html>
