--- a/CV.html
+++ b/CV.html
@@ -74,5 +74,12 @@
         <li></li>
     </ul>
 </div>
+<footer>
+    <a href="#twitter"></a>
+    <a href="#insta"></a>
+    <a href="#likedin"></a>
+    <a href="#Github"></a>
+    <a href="#Pinterest"></a>
+</footer>
 </body>
 </html>
