--- a/CV.html
+++ b/CV.html
@@ -49,7 +49,8 @@
 </div>
 <div>
     <h3>Profil</h3>
-    <p>
+    <p>Après mes études dans le domaine de l'informatique, je me suis orienté dans le secteur de l'agroalimentaire, le bassin d'emploi étant le plus porteur dans ma localité. J'ai évolué jusqu'à atteindre des postes à responsabilités. <br>
+        Aujourd'hui, je me reconverti professionnellement pour travailler dans le secteur d'activité qui me passionne : l'informatique.
 
     </p>
 
