--- a/CV.html
+++ b/CV.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Page1.CSS">
     <title>Curicumun Vitae</title>
 </head>
 <body>
