--- a/CV.html
+++ b/CV.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
   <header>
     <div class="header-inner">
       <div class="profile">
@@ -36,16 +35,18 @@
   </header>
 
   <main>
-    <section>
-      <h3>Compétences</h3>
-      <ul class="Comp">
+    <div class="Corps">
+    <div class="Left">
+      <section>
+        <h3>Compétences</h3>
+        <ul class="Comp">
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
         <li>PHP</li>
         <li>Python</li>
-      </ul>
-    </section>
+        </ul>
+      </section>
 
     <section>
       <h3>Langues</h3>
@@ -73,9 +74,11 @@
         <li>Séries</li>
         <li>Jeux vidéos</li>
       </ul>
-    </section>
-
-    <section>
+     
+      </section>
+    </div>
+    <div class="Right">
+      <section>
       <h3>Profil</h3>
       <p>
         Après mes études dans le domaine de l’informatique, je me suis orienté dans le secteur de l’agroalimentaire, 
@@ -127,6 +130,8 @@
         <tr><th>Récapé</th></tr>
       </table>
     </section>
+    </div>
+    </div>
   </main>
 
   <footer>
