--- a/CV.html
+++ b/CV.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum Vitae – Salim Khorchi</title>
 
+   <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+
   <!-- Import de Lato via Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
@@ -16,8 +20,8 @@
   <header>
     <div class="header-inner">
       <div class="profile">
-        <a href="./Images/profile-large.jpg" target="_blank" class="profile-link">
-          <img src="./Images/profile.jpg" alt="Photo de Salim Khorchi" class="profile-img">
+        <a href="./Fonts/Photo/Photo profil.png" target="_blank" class="profile-link">
+          <img src="./Fonts/Photo/Photo profil.png" alt="Photo de Salim Khorchi" class="profile-img">
         </a>
       </div>
 
@@ -25,10 +29,21 @@
         <h1>Salim Khorchi</h1>
         <h2>Développeur Web et Web Mobile</h2>
         <nav class="contacts">
-          <a href="mailto:salimkhorchi11@gmail.com">Mail</a>
-          <a href="tel:0772415145">Téléphone</a>
-          <a href="https://www.google.com/maps/place/49+Rue+de+Dunkerque,+11400+Castelnaudary" target="_blank">Adresse</a>
-          <a href="#">Permis B</a>
+          <a href="mailto:salimkhorchi11@gmail.com">
+            <i class="fa-solid fa-envelope"></i> Mail
+          </a>
+
+          <a href="tel:0772415145">
+            <i class="fa-solid fa-phone"></i> Téléphone
+          </a>
+
+          <a href="https://www.google.com/maps/place/49+Rue+de+Dunkerque,+11400+Castelnaudary" target="_blank">
+            <i class="fa-solid fa-location-dot"></i> Adresse
+          </a>
+
+          <a href="#">
+            <i class="fa-solid fa-car"></i> Permis B
+          </a>
         </nav>
       </div>
     </div>
