Finitions du bandeau de gauche

--- a/CV.html
+++ b/CV.html
@@ -12,19 +12,20 @@
   <!-- Import de Lato via Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-  <!-- Feuille de style principale -->
+                      <!-- Feuille de style principale -->
   <link rel="stylesheet" href="./Page1.CSS">
 </head>
 
 <body>
   <header>
+                      <!-- Photo de profil -->
     <div class="header-inner">
       <div class="profile">
         <a href="./Fonts/Photo/Photo profil.png" target="_blank" class="profile-link">
           <img src="./Fonts/Photo/Photo profil.png" alt="Photo de Salim Khorchi" class="profile-img">
         </a>
       </div>
-
+<!-- Adresses -->
       <div class="identity">
         <h1>Salim Khorchi</h1>
         <h2>Développeur Web et Web Mobile</h2>
@@ -50,18 +51,56 @@
   </header>
 
   <main>
+    <!-- Contenant du corp -->
     <div class="Corps">
+      <!-- === Bandeau de gauche === -->
     <div class="Left">
-      <section>
-        <h3>Compétences</h3>
-        <ul class="Comp">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>PHP</li>
-        <li>Python</li>
-        </ul>
-      </section>
+      <!-- = Compétences = -->
+      <section class="competences">
+  <h3>Compétences</h3>
+  <ul class="Comp">
+    <li class="level-4">
+      <span class="skill-name">HTML</span>
+      <span class="stars">
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+      </span>
+    </li>
+    <li class="level-3">
+      <span class="skill-name">CSS</span>
+      <span class="stars">
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+      </span>
+    </li>
+    <li class="level-0">
+      <span class="skill-name">JavaScript</span>
+      <span class="stars">
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+      </span>
+    </li>
+    <li class="level-0">
+      <span class="skill-name">PHP</span>
+      <span class="stars">
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+      </span>
+    </li>
+  </ul>
+</section>
 
     <section>
       <h3>Langues</h3>
