--- a/CV.html
+++ b/CV.html
@@ -101,7 +101,7 @@
     </li>
   </ul>
 </section>
-
+<!-- Langues -->
     <section>
       <h3>Langues</h3>
       <dl class="Langues">
@@ -133,14 +133,15 @@
     </div>
     <div class="Right">
       <section>
-      <h3>Profil</h3>
-      <p>
-        Après mes études dans le domaine de l’informatique, je me suis orienté dans le secteur de l’agroalimentaire, 
-        le bassin d’emploi étant le plus porteur dans ma localité. J’ai évolué jusqu’à atteindre des postes à responsabilités. 
-        Aujourd’hui, je me reconvertis professionnellement pour travailler dans le secteur d’activité qui me passionne : 
-        l’informatique.
-      </p>
-    </section>
+  <h3>Profil</h3>
+  <p>
+    Après mes études dans le domaine de l’informatique, je me suis orienté dans le secteur de l’agroalimentaire, 
+    le bassin d’emploi étant le plus porteur dans ma localité.
+  </p>
+  <p>
+    J’ai évolué jusqu’à atteindre des postes à responsabilités. Aujourd’hui, je me reconvertis professionnellement pour travailler dans le secteur d’activité qui me passionne : l’informatique.
+  </p>
+</section>
 
     <section>
       <h3>Formations</h3>
