--- a/CV.html
+++ b/CV.html
@@ -110,7 +110,7 @@
         <dt>Espagnol</dt><dd>Notions</dd>
       </dl>
     </section>
-
+<!-- Qualités -->
     <section>
       <h3>Qualités</h3>
       <ul>
@@ -120,7 +120,7 @@
         <li>Esprit d’équipe</li>
       </ul>
     </section>
-
+<!-- Centres d'intérêts -->
     <section>
       <h3>Centres d’intérêt</h3>
       <ul>
@@ -131,7 +131,9 @@
      
       </section>
     </div>
+    <!-- Contenant Droit -->
     <div class="Right">
+      <!-- Profil -->
       <section>
   <h3>Profil</h3>
   <p>
